Add JPA entity classes